--- a/quantumultx.conf
+++ b/quantumultx.conf
@@ -126,9 +126,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smz
 
 https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Q-Search_All_in_one.conf, tag=Q-Search, enabled=true
 
-https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Js_local_WorkingCopy.conf, tag=nzw9314脚本, enabled=true
+https://raw.githubusercontent.com/jphtmt/Quantumult-X/main/js.conf, tag=脚本, enabled=true
 
-https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf, tag=nzw9314获取Cookie(右滑禁用), enabled=true
+https://raw.githubusercontent.com/jphtmt/Quantumult-X/main/get_cookie.conf,enabled=true,tag=cookie
 
 
 [server_local]
